test(04-llm-sentiment-layer-03): fix SectorDigestTest and disable legacy LlmModuleTest
- Fix SectorDigestTest mock repository calls with proper entity types
- Add helper methods for creating SentimentResultEntity for testing
- Disable legacy LlmModuleTest tests that require live vLLM server
- All 80 LLM module tests now pass with 0 failures